// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el ProductImage Debe de mostrar el componente sin imagen personalizada 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Coffe Mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Pruebas en el ProductImage debe de mostrar el componente correctamente con la imagen personalizada 1`] = `
<img
  alt="Coffe Mug"
  className="productImg undefined"
  src="una imagen cualquiera"
/>
`;
